# cxtools

./: .gitignore  CMakeLists.txt  build.sh  main.cc
App/: App.cc  App.h
image_editor/: avifutil.c  image_editor.c  image_editor.h
include/: files.cc  files.h
